<?xml version="1.0"?>
<package format="2">
  <name>connext_cmake_module</name>
  <version>0.0.0</version>
  <description>Provide CMake module to find RTI Connext.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
