<?xml version="1.0"?>
<package format="2">
  <name>rmw_connext_dynamic_cpp</name>
  <version>0.0.0</version>
  <description>Implement the ROS middleware interface using RTI Connext DynammicData interface in C++.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>connext_cmake_module</build_depend>
  <build_depend>libndds51-dev</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rmw_connext_shared_cpp</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_typesupport_introspection_c</build_depend>
  <build_depend>rosidl_typesupport_introspection_cpp</build_depend>

  <build_export_depend>connext_cmake_module</build_export_depend>
  <build_export_depend>libndds51</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_introspection_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_introspection_cpp</build_export_depend>

  <exec_depend>rmw</exec_depend>
  <exec_depend>rmw_connext_shared_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
