<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosidl_typesupport_connext_c</name>
  <version>0.0.0</version>
  <description>Generate the C interfaces for RTI Connext.</description>
  <maintainer email="jackie@osrfoundation.org">Jackie Kay</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>connext_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>rosidl_generator_c</buildtool_depend>
  <buildtool_depend>rosidl_typesupport_connext_cpp</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>connext_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_dds_idl</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_connext_cpp</buildtool_export_depend>

  <build_export_depend>rmw</build_export_depend>

  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
